objects/FinServ__PolicyPaymentMethod__c.object
<CustomObject>
    <description>Represents the mode of payment for the policy. For example, credit card, internet banking.</description>
    <fields>
        <fullName>FinServ__EndDate__c</fullName>
        <description>The date on which the financial account was removed as the active payment method</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FinServ__FinancialAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The financial account that is used to make any payments for the policy. Debit card, credit card, bank account are a few examples.</description>
        <label>Financial Account</label>
        <referenceTo>FinServ__FinancialAccount__c</referenceTo>
        <relationshipLabel>Policy Payment Methods</relationshipLabel>
        <relationshipName>PolicyPaymentMethods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__InsurancePolicy__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The policy for which this payment setup is done.</description>
        <label>Insurance Policy</label>
        <referenceTo>InsurancePolicy</referenceTo>
        <relationshipLabel>Policy Payment Methods</relationshipLabel>
        <relationshipName>PolicyPaymentMethods</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinServ__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this financial account (and the billing configuration) is active.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__IsPrimaryAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the financial account is the primary billing account for the policy.</description>
        <label>Primary Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__PaymentPercentage__c</fullName>
        <description>The percentage of the total bill amount that is charged to this financial account (credit card, debit card, internet banking, etc.)</description>
        <label>Payment Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>FinServ__StartDate__c</fullName>
        <description>The date on which the financial account was added as an active payment method.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <label>Policy Payment Method</label>
    <nameField>
        <displayFormat>PPM-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Policy Payment Methods</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>